# drf-turbo

./: pyproject.toml  requirements.txt  setup.py
drf_turbo/: cython_metaclass.c  cython_metaclass.h  exceptions.c  serializer.c  utils.c
